@@ -34,7 +34,7 @@ use_ok('npg_pipeline::pluggable::harold::post_qc_review');
     upload_auto_qc_to_qc_database
     run_run_archived
     run_qc_complete
-    update_warehouse
+    update_warehouse_post_qc_complete
     );
   my @original = @functions_in_order;
   unshift @original, 'lsf_start';
@@ -64,10 +64,9 @@ use_ok('npg_pipeline::pluggable::harold::post_qc_review');
   my $log_dir_in_outgoing = $log_dir;
   $log_dir_in_outgoing =~ s{/analysis/}{/outgoing/}smx;
   my $job_name = 'warehouse_loader_1234_post_qc_review';
-  my $unset_string = 'unset NPG_WEBSERVICE_CACHE_DIR;unset NPG_CACHED_SAMPLESHEET_FILE;';
   my $prefix = qq[bsub -q lowload 50 -J $job_name ] .
     qq[-o $log_dir/${job_name}_${timestamp}.out];
-  my $command = qq['${unset_string}warehouse_loader --verbose --id_run 1234'];
+  my $command = q['warehouse_loader --verbose --id_run 1234 --lims_driver_type samplesheet'];
   is($post_qc_review->_update_warehouse_command('warehouse_loader', (50)),
     qq[$prefix  $command], 'update warehouse command');
 
@@ -75,6 +74,7 @@ use_ok('npg_pipeline::pluggable::harold::post_qc_review');
   $prefix = qq[bsub -q lowload 50 -J $job_name ] .
     qq[-o $log_dir_in_outgoing/${job_name}_${timestamp}.out];
   my $preexec = qq(-E "[ -d '${log_dir_in_outgoing}' ]");
+  $command = q['warehouse_loader --verbose --id_run 1234 --lims_driver_type ml_warehouse_fc_cache'];
   is($post_qc_review->_update_warehouse_command(
     'warehouse_loader', (50, {}, {'post_qc_complete' => 1})),
     join(q[ ],$prefix,$preexec,$command),
